# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml
.github/workflows/: audit.yml
db/migrations/: 20230413122045_create_subscription_table.sql
src/: configuration.rs  lib.rs  main.rs  routes.rs  telemetry.rs
src/storage/: database.rs  mod.rs
tests/: health_check.rs
