[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
hyper = "0.14.25"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }


[dev-dependencies]
ureq = "2.6.2"
