[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
hyper = "0.14.25"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = [
    'runtime-tokio-rustls',
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
config = "0.13.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tower-http = {version = "0.4.0",features = ["trace"]}
tracing-log = "0.1.3"
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
ureq = "2.6.2"
once_cell = "1"

[profile.dev.package.sqlx-macros]
opt-level = 3
